--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="./output.css">
+  <link rel="stylesheet" href="./src/output.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body class=" bg-pattern-mobile md:bg-pattern-desktop bg-no-repeat bg-contain flex flex-col h-screen box-border bg-neutral1blue text-black p-4 ">
   <main class="bg-white grid grid-cols-1 min-w-56 max-w-[375px] md:max-w-[450px] m-auto rounded-2xl shadow-card duration-300 ease-linear">
     <section role="headerbg">
-      <img src="../images/illustration-hero.svg" alt="image" class="rounded-t-2xl">
+      <img src="./src/images/illustration-hero.svg" alt="image" class="rounded-t-2xl">
     </section>
     <section class="min-w-fit mx-auto mt-4 mb-2 px-[12%] text-center" role="text">
       <h1 class="font-black text-neutral3blue text-2xl my-4">Order Summary</h1>
@@ -21,7 +21,7 @@
       device anywhere you like!</p>
     </section>
     <section role="product" class="bg-neutral1blue grid grid-cols-[1fr_2fr_1fr] grid-rows-2 gap-x-4 min-w-fit mx-6 md:mx-[10%] my-6 px-4 py-2 rounded-xl">
-      <img src="../images/icon-music.svg" alt="icon" class="row-span-2 self-center"> 
+      <img src="./src/images/icon-music.svg" alt="icon" class="row-span-2 self-center"> 
       <section role = "textproduct" class = "row-span-2 grid grid-cols-subgrid my-4">
         <p class="col-span-1 row-span-1 font-black text-neutral3blue">Annual Plan</p>
         <p class="col-span-1 row-span-1 text-neutral3blue opacity-60">$59.99/year</p>
